-
Bug
-
Resolution: Done
-
P0: Blocker
-
5.2.0 Alpha
-
None
-
Windows 7 mingw 4.8 android armv5
-
-
ab90eefcc0714dfba032e7e4aa4c94cb8c6cc40c
Android armv5 windows build fails:
..\3rdparty\javascriptcore\JavaScriptCore\assembler\MacroAssemblerARM.cpp:47:3: error: conflicting declaration 'typedef struct Elf32_auxv_t Elf32_auxv_t'
1
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
For Gerrit Dashboard: QTBUG-33780 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
67148,3 | Disable JavaScriptCore JIT for Android when building on Windows | stable | qt/qtbase | Status: MERGED | +2 | 0 |