Disable JavaScriptCore JIT for Android when building on Windows

On Linux, we will do a configure test to determine whether JIT should
be turned off when compiling JavaScriptCore in the QtScript module,
but this test is never run on Windows. The result was that JIT was
disabled on Linux and enabled on Windows, and compilation broke on
Windows.

Task-number: QTBUG-33780
Change-Id: I37991c6da98b35330c07c54f2a0b143d20780c91
Reviewed-by: BogDan Vatra <bogdan@kde.org>
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@digia.com>
Reviewed-by: Paul Olav Tvete <paul.tvete@digia.com>

cregit: ab90eefcc0714dfba032e7e4aa4c94cb8c6cc40c https://github.com/qt/qtbase/commit/ab90eefcc0714dfba032e7e4aa4c94cb8c6cc40c