tools/configure/configureapp.cpp
@@ -10706,6 +10706,13 @@ index|]
 operator|=
 literal|"no"
 expr_stmt|;
+name|dictionary
+index|[
+literal|"JAVASCRIPTCORE_JIT"
+index|]
+operator|=
+literal|"no"
+expr_stmt|;
 block|}
 block|}
 end_function
@@ -17130,6 +17137,34 @@ literal|"QT_LFLAGS_SQLITE"
 index|]
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|dictionary
+index|[
+literal|"JAVASCRIPTCORE_JIT"
+index|]
+operator|==
+literal|"no"
+condition|)
+name|qmakeVars
+operator|+=
+literal|"JAVASCRIPTCORE_JIT = no"
+expr_stmt|;
+elseif|else
+if|if
+condition|(
+name|dictionary
+index|[
+literal|"JAVASCRIPTCORE_JIT"
+index|]
+operator|==
+literal|"yes"
+condition|)
+name|qmakeVars
+operator|+=
+literal|"JAVASCRIPTCORE_JIT = yes"
+expr_stmt|;
+comment|// else let JavaScriptCore decide
 if|if
 condition|(
 name|dictionary
